# zombified

./: .gitignore  CMakeLists-xcode.txt  CMakeLists.txt  LICENSE  Makefile  Makefile.orig  README.md  README.txt  a1  main  read me.rtf
Zombified/Zombified/: main.cpp
Zombified/Zombified.xcodeproj/: project.pbxproj
Zombified/Zombified.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Zombified/Zombified.xcodeproj/project.xcworkspace/xcuserdata/markpedersen.xcuserdatad/: UserInterfaceState.xcuserstate
Zombified/Zombified.xcodeproj/xcuserdata/markpedersen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Zombified/Zombified.xcodeproj/xcuserdata/markpedersen.xcuserdatad/xcschemes/: Zombified.xcscheme  xcschememanagement.plist
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  zombie
build_xcode/: CMakeCache.txt  cmake_install.cmake
build_xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
build_xcode/zombie.xcodeproj/: project.pbxproj
build_xcode_2/: CMakeCache.txt  cmake_install.cmake
build_xcode_2/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
build_xcode_2/Debug/: zombie
build_xcode_2/Release/: zombie
build_xcode_2/Release/shaders/: colored.fs.glsl
build_xcode_2/zombie.build/Debug/ALL_BUILD.build/: Script-3E19735452D549C3AAE50B04.sh  Script-5457C7459CF04FAE88AF6E8F.sh  dgph
build_xcode_2/zombie.build/Debug/ZERO_CHECK.build/: Script-3CBC256340684ABC9864FDC0.sh  dgph
build_xcode_2/zombie.build/Debug/zombie.build/: dgph
build_xcode_2/zombie.build/Release/ZERO_CHECK.build/: Script-FAF18E79394B42D29BB83B3D.sh  dgph
build_xcode_2/zombie.build/Release/zombie.build/: dgph
build_xcode_2/zombie.xcodeproj/: project.pbxproj
build_xcode_2/zombie.xcodeproj/project.xcworkspace/xcshareddata/: zombie.xccheckout
build_xcode_2/zombie.xcodeproj/project.xcworkspace/xcuserdata/irenefang.xcuserdatad/: UserInterfaceState.xcuserstate
build_xcode_2/zombie.xcodeproj/project.xcworkspace/xcuserdata/ppnia.xcuserdatad/: UserInterfaceState.xcuserstate
build_xcode_2/zombie.xcodeproj/xcuserdata/irenefang.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
build_xcode_2/zombie.xcodeproj/xcuserdata/irenefang.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  xcschememanagement.plist  zombie.xcscheme
build_xcode_2/zombie.xcodeproj/xcuserdata/ppnia.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
data/meshes/: missile.mesh
ext/Box2D/Collision/: b2BroadPhase.h  b2CollideCircle.cpp  b2CollideEdge.cpp  b2CollidePolygon.cpp  b2DynamicTree.cpp  b2TimeOfImpact.cpp  b2TimeOfImpact.h
ext/Box2D/Collision/Shapes/: b2ChainShape.h  b2CircleShape.cpp  b2CircleShape.h  b2EdgeShape.cpp  b2Shape.h
ext/Box2D/Common/: b2BlockAllocator.cpp
ext/Box2D/Dynamics/Contacts/: b2EdgeAndCircleContact.cpp  b2EdgeAndPolygonContact.cpp
ext/gl3w/: gl3w.h
shaders/: player.fs.glsl  player.vs.glsl  spawn_effect.fs.glsl  text.vs.glsl
src/: AABBTree.cpp  CollisionManager.cpp  CollisionManager.h  Ice copy.hpp  Ice.cpp  Ice.hpp  JPS.h  KMeans.cpp  KMeans.h  Kinetic.cpp  Kinetic.h  Limb.cpp  Limb.h  MapGrid.cpp  MapGrid.h  PhysicalBody.cpp  PhysicalBody.h  Physics.cpp  Physics.h  ToolManager.cpp  ToolManager.h  antidote.cpp  antidote.hpp  armour.cpp  armour.hpp  arms.cpp  arms.hpp  blood.cpp  blood.hpp  bomb.cpp  bomb.hpp  broadphase.cpp  button.cpp  button.hpp  common.cpp  common.hpp  explosion.cpp  explosion.hpp  fish.cpp  freeze.cpp  (+61 more)
(+130 files in other folders)
